# gradebook-management-system

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  SECURITY.md  dataframe.cpp  dataframe.h  doxygen.conf  gradebook.cpp  permissions.cpp  permissions.h
.github/: CONTRIBUTING.md  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
gradebook/: CMakeLists.txt
gradebook/assets/: attendance.csv
gradebook/include/: dataframe.h  exceptions.h  gradebook.h  permissions.h  reportgenerator.h  utils.h
gradebook/source/: dataframe.cpp  exceptions.cpp  gradebook.cpp  logs.cpp  main.cpp  permissions.cpp  reportgenerator.cpp  utils.cpp
include/: exceptions.h  utils.h
tests/: CMakeLists.txt
tests/assets/: assignmentdata.csv  grades.csv  studentdata.csv
tests/include/fixtures/: assignment_test_fixture.h  grade_test_fixture.h  student_test_fixture.h  teacher_test_fixture.h
tests/src/fixtures/: assignment_test_fixture.cpp  grade_test_fixture.cpp  student_test_fixture.cpp  teacher_test_fixture.cpp
tests/src/tests/: assignment_test.cpp  grade_test.cpp  student_test.cpp  teacher_test.cpp
tests/tests/: StudentTest.cpp
